# HelloJni

./: ReadMe.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/gin/hellojni/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/gin/hellojni/: GinApplication.java  MainActivity.java  Utils.java
app/src/main/java/com/gin/hellojni/activity/: FileActivity.java  MD5Activity.java
app/src/main/java/com/gin/hellojni/tools/: Constant.java  SecretUtils.java  Utils.java
app/src/main/res/drawable/: line.xml
app/src/main/res/layout/: activity_file.xml  activity_main.xml  activity_md5.xml
app/src/test/java/com/gin/hellojni/: ExampleUnitTest.java
ginlibrary/: CMakeLists.txt  build.gradle
ginlibrary/src/androidTest/java/com/gin/lib/: ExampleInstrumentedTest.java
ginlibrary/src/main/: AndroidManifest.xml
ginlibrary/src/main/cpp/: md5.c  md5.h  native-lib.c
ginlibrary/src/main/java/com/gin/lib/: GinLib.java
ginlibrary/src/main/java/com/gin/lib/tools/: StrUtils.java
ginlibrary/src/main/res/values/: strings.xml
ginlibrary/src/test/java/com/gin/lib/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
